--- a/css/stylePerros.css
+++ b/css/stylePerros.css
@@ -1,158 +1,21 @@
 .body{
-    background-color: cadetblue ;
+    background-color: #f1e3c9;
 }
-
-.titulo{
-    font-family:Georgia, 'Times New Roman', Times, serif;
-    font-size: 300%;
-    text-align: center;
-    margin-bottom: -100px;
-}
-
-.grid-container{
-    display: grid;
-    grid-template-areas: 'menu menu main main aside aside';
-    column-gap: 50px;
-    row-gap: 50px;
-    margin-left: 30px;
-    margin-right: 30px;
-}
-
-.grid-container div{
-    border-radius: 35%;
-    background-color: bisque;
-    border: 1px solid black;
-    height: 650px;
-    margin-top: 170px;
-}
-
-.menu{
-    grid-area: menu;
-}
-
-.main{
-    grid-area: main;
-}
-
-.aside{
-    grid-area: aside;
-}
-
-.tituloVolt{
-    margin-bottom: 0px;
-    text-align: center;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-size: 300%;
-}
-
-.tituloOliver{
-    margin-bottom: 0px;
-    text-align: center;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-size: 300%;
-}
-
-.tituloArtyom{
-    margin-bottom: 0px;
-    text-align: center;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-size: 300%;
-}
-
-.imagenVolt{
-    border-top-left-radius: 30%;
-    border-bottom-right-radius: 30%;
-    display: block;
-    margin: auto;
+.imagen{
+    width: 300px;
     height: 250px;
-    width: 250px;
-    border-style: solid;
-    transition: transform .5s;
-}
-
-.imagenVolt:hover{
-    transform: scale(1.5);
-}
-
-.imagenOliver{
-    border-top-left-radius: 30%;
-    border-bottom-right-radius: 30%;
-    display: block;
-    margin: auto;
-    height: 250px;
-    width: 250px;
-    border-style: solid;
-    transition: transform .5s;
-}
-.imagenOliver:hover{
-    transform: scale(1.5);
-}
-
-.imagenArtyom{
-    border-top-left-radius: 30%;
-    border-bottom-right-radius: 30%;
-    display: block;
-    margin: auto;
-    height: 250px;
-    width: 250px;
-    border-style: solid;
-    transition: transform .5s;
-}
-.imagenArtyom:hover{
-    transform: scale(1.5);
-}
-
-.descripcionVolt{
-    text-align: center;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ;
-    font-size: 170%;
-    margin-top: 10px;
-    margin-bottom: 0px;
-    margin-left: 50px;
-    margin-right: 50px;
-}
-
-.descripcionOliver{
-    text-align: center;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ;
-    font-size: 170%;
-    margin-top: 10px;
-    margin-bottom: 0px;
-    margin-left: 50px;
-    margin-right: 50px;
-}
-
-.descripcionArtyom{
-    text-align: center;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ;
-    font-size: 170%;
-    margin-top: 10px;
-    margin-bottom: 0px;
-    margin-left: 50px;
-    margin-right: 50px;
-}
-
-.botonVolt{
     margin-top: 30px;
-    margin-bottom: 0px;
-    margin-left: 160px;
-    margin-right: 0px;
+    margin-bottom: 30px;
+    border-radius: 5%;
+    box-shadow: 0px 10px 20px;
+    transition: 0.5s;
+    min-width: 250px;
 }
-
-.botonOliver{
-    margin-top: 60px;
-    margin-bottom: 0px;
-    margin-left: 160px;
-    margin-right: 0px;
+.imagen:hover{
+    transform: scale(1.2);
 }
-
-.botonArtyom{
-    margin-top: 60px;
-    margin-bottom: 0px;
-    margin-left: 160px;
-    margin-right: 0px;
-}
-
-.linkVolver{
-    text-decoration: none;
+.titulo{
+    font-family: 'Kanit', sans-serif;
+    text-align: center;
+    margin-top: 10px;
 }
