--- a/css/stylePerros.css
+++ b/css/stylePerros.css
@@ -1,6 +1,12 @@
 .body{
     background-color: #f1e3c9;
 }
+.navbar{
+    border-bottom: 3px #fadba2 solid ;
+}
+.nav-link{
+    font-size:125%;
+}
 .imagen{
     width: 300px;
     height: 250px;
@@ -18,4 +24,54 @@
     font-family: 'Kanit', sans-serif;
     text-align: center;
     margin-top: 10px;
+}
+.btn{
+    padding: 0rem;
+    text-decoration: none;
+    border: 0px;
+}
+.modal-title{
+    text-align: center;
+}
+.btn-danger {
+    color: #fff;
+    background-color: #6d6fffb4;
+    width: 150px;
+    height: 30px;
+  }
+.btn-adoptar:hover {
+    color: #fff;
+    background-color: #1014ffb4;
+    border-color: #1014ffb4;
+}
+.btn-cerrar:hover {
+    color: #fff;
+    background-color: #1014ffb4;
+    border-color: #1014ffb4;
+}
+.imagen-modal{
+    border: 3px black solid;
+    border-radius: 30px;
+    max-width: 300px;
+    max-height: 200px;
+}
+.modal-content {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    pointer-events: auto;
+    background-color: #f1e3c9;
+    background-clip: padding-box;
+    border: 3px solid rgba(0,0,0,.2);
+    border-radius: .3rem;
+    outline: 0;
+}
+.descripcionPerro{
+    text-align: center;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+}
+.bi{
+    font-size: xx-large;
+    margin-left: 10px;
 }
