Pequeño arreglo en un border xd
uwu

--- a/css/stylePerros.css
+++ b/css/stylePerros.css
@@ -64,7 +64,7 @@
     background-color: #f1e3c9;
     background-clip: padding-box;
     border: 3px solid rgba(0,0,0,.2);
-    border-radius: .3rem;
+    border-radius: 30px;
     outline: 0;
 }
 .descripcionPerro{
