--- a/css/stylePerros.css
+++ b/css/stylePerros.css
@@ -8,14 +8,15 @@
     font-size:125%;
 }
 .imagen{
-    width: 300px;
-    height: 250px;
+    width: 100%;
+    max-width: 300px;
     margin-top: 30px;
     margin-bottom: 30px;
     border-radius: 5%;
     box-shadow: 0px 10px 20px;
     transition: 0.5s;
-    min-width: 250px;
+    height: 100%;
+    max-height: 150px;
 }
 .imagen:hover{
     transform: scale(1.2);
